[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zeose"
version = "0.0.1"
authors = [
  { name="Jerry Crum", email="jcrum@nd.edu" },
]
description = "A package with functions that automate zeolite structure building processes"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "ase",
    "networkx"
]

# dev dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/jtcrum/zse"
Issues = "https://github.com/jtcrum/zse/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}

[tool.ruff]
include = ["**/pyproject.toml", "*.ipynb", "*.py", "*.pyi"]
exclude = ["__init__.py"]
line-length = 100
src = [".", "zse"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# consider selecting "ISC", for implicit string concat
# consider selecting "T201", for print in production code
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "E",    # pycodestyle error
    "EXE",  # flake8-executable
    "F",    # pyflakes
    "FA",   # flake8-future-annotations
    "FLY",  # flynt
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "PD",   # pandas-vet
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PYI",  # flakes8-pyi
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "SIM",  # flake8-simplify
    "SLOT", # flakes8-slot
    "TCH",  # flake8-type-checking
    "TID",  # tidy imports
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
    "W",    # pycodestyle warning
    "YTT",  # flake8-2020
]
# also consider ignoring "C901", for high mccabe function complexity
# also consider ignoring "ERA001", for found commented out code
ignore = [
    "RET504",  # return statement in finally block
    "B006",    # Do not use mutable data structures for argument defaults
    "ANN003",  # missing type annotations for kwargs
    "B019",    # Use of functools.lru_cache on methods can lead to memory leaks
    "C408",    # unnecessary-collection-call
    "COM812",  # trailing comma missing
    "D205",    # 1 blank line required between summary line and description
    "D415",    # first line of docstring must end with punctuation
    "DTZ005",  # use of datetime.now() without timezone
    "E731",    # do not assign a lambda expression, use a def
    "EM",      # flake8-errmsg
    "FBT001",  # Boolean positional argument in function
    "FBT002",  # Boolean keyword argument in function
    "NPY002",  # TODO replace legacy np.random.seed
    "PLR",     # pylint refactor
    "PLW2901", # Outer for loop variable overwritten by inner assignment target
    "PT006",   # pytest-parametrize-names-wrong-type
    "PT011",   # pytest-raises-too-broad
    "PT013",   # pytest-incorrect-pytest-import
    "PT019",   # pytest-fixture-param-without-value
    "PTH",     # prefer Path to os.path
    "S301",    # pickle can be unsafe
    "S310",    # url open functions can be unsafe
    "TRY003",  # long exception messages not defined in the exception class itself
    "UP015",   # unnecessary "r" in open call
    "Q000",    # single quotes
    "D",       # do not fight with doc for now, todo in the future
    "UP035",   # deprecated Dict and List, but keep to support python<3.10
    "UP006",   # deprecated Dict and List, but keep to support python<3.10
    "ICN001",  # import name convention
    "UP031",   # Use format specifiers instead of percent format
    "FA100",   # from future suggestion
    "RUF012",  # type annotation for mutable class attributes
    "RUF002",  # ambiguous characters in docstrings
    "RUF003",  # ambiguous characters in comments
]
pydocstyle.convention = "google"
